--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html>
 <head>
   <title> Apple Stock </title>
-  <link href="~/Development/chart-example/style.css" rel="stylesheet" type="text/css">
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
-  <script src="//d3js.org/d3.v3.min.js"></script>
-  <script src="chart.js"></script>
-
+<script src="//d3js.org/d3.v3.min.js"></script>
+<script src="chart.js"></script>
 </body>
-
 </html>
